src/scss/objects/_form.scss
.form__control {
    background-color: $input-background-colour;
    border: 1px solid $input-border-colour;
    border-radius: $border-radius;
    color: $text-colour;
    height: ($line-height * 1.5);
    line-height: $input-height;
    padding: $input-padding-y $input-padding-x;
    vertical-align: baseline;
    width: 100%;

    &:focus {
        outline: none;
    }

    &[disabled] {
        background: #f2f2f2;
        cursor: not-allowed;
    }
}

@each $size, $multiplier in $sizes {
    .input--#{$size} {
        font-size: $multiplier * 1rem;
        line-height: $multiplier * $input-height;
        padding: ($input-padding-y * $multiplier) ($input-padding-x * $multiplier);
    }
}

textarea.form__control,
select[multiple].form__control {
    min-height: 6.5rem;
    height: auto;
    overflow-y: hidden;
}

textarea.form__control {
    resize: vertical;
}

select.form__control {
    height: ($line-height * 1.5);
}

.select-wrapper {
    background-color: $input-background-colour;
    position: relative;
    z-index: 1;

    &:after {
        @include caret('down', $grey, 0.4rem);
        position: absolute;
        right: 0.5rem;
        top: 50%;
        z-index: -1;
    }

    select {
        background-color: transparent;
        appearance: none;
        padding-right: 2rem;

        &::-ms-expand {
            display: none;
        }

        > option {
            background-color: transparent;
        }
    }
}

.form__group {
    margin-bottom: $line-height;
    position: relative;
}

.form__group--actions {
    text-align: right;
}

.form--inline {
    .form__group {
        display: inline-block;
    }
    .form__control {
        width: auto;
    }
}

.form__group--error {
    .form__error {
        opacity: 1;
    }
}

.form__label {
    color: $text-colour;
    display: block;
    margin-bottom: ($line-height / 2);
}

.form__error {
    color: $state-danger-text;
    display: block;
    font-weight: bold;
    font-size: $font-size-milli;
    opacity: 0;
    transition: all 150ms ease-out;
}

.radio,
.checkbox {
    display: inline-block;
    user-select: none;

    &:not(:last-child) {
        margin-bottom: ($line-height / 2);
    }

    &.radio--inline,
    &.checkbox--inline {
        margin-bottom: 0;

        &:not(:last-child) {
            margin-right: ($line-height / 2);
        }
    }

    > input {
        display: none;

        + span {
            display: block;
            position: relative;
            padding-left: 30px;
        }

        + span:before {
            @extend .icon;
            @extend .icon--circle-empty;
            color: $grey;
            font-size: $font-size-kilo;
            width: auto;
            top: 0;
            bottom: 0;
            left: 0;
            position: absolute;
            vertical-align: middle;
            display: block;
        }

        &:checked + span:before,
        &:hover + span:before {
            color: $brand-primary;
        }
    }
}

.radio > input {
    + span:before {
        @extend .icon--circle-empty;
    }

    &:checked + span:before {
        @extend .icon--circle-checked;
    }
}

.checkbox > input {
    + span:before {
        @extend .icon--check-empty;
    }

    &:checked + span:before {
        @extend .icon--check;
    }
}

.loading-icon {
    display: none;
}

.form--alternate {
    input:-webkit-autofill,
    textarea:-webkit-autofill,
    select:-webkit-autofill {
        /*
            This looks like a weird hack. You're right! I can't stand the
            yellow autofill background. I know when a field's been autofilled
            because I can see with my eyes that the fields are filled and my
            fingers aren't on the keyboard, they're up my nose.
        */
        box-shadow: 0 0 0px 500px white inset;
    }

    .form__group {
        padding-top: $line-height;
    }

    .form__label {
        position: absolute;
        top: $line-height + $input-padding-y;
        transition: all 200ms ease-out;
    }

    .form__control {
        border: 0;
        border-radius: 0;
        margin-bottom: 1px;
        border-bottom: 1px solid $input-border-colour;
        padding: $input-padding-y 0;

        &:focus {
            margin-bottom: 0;
            border-bottom-width: 2px;
            border-bottom-color: $brand-primary;
        }
    }

    .form__control:focus ~ label,
    .has-content .form__control ~ label {
        color: $dark-grey;
        font-size: $font-size-milli;
        top: 0;
    }
}

